crates/eure-macros/tests/compile_fail/allow_unknown_fields_on_tuple_variant.rs
use eure::FromEure;

#[derive(FromEure)]
enum Test {
    #[eure(allow_unknown_fields)]
    Tuple(String, i32),
}

fn main() {}
