crates/eure-macros/tests/compile_fail/allow_unknown_fields_on_tuple_variant.stderr
error: #[eure(allow_unknown_fields)] is only valid on struct variants with named fields
 --> tests/compile_fail/allow_unknown_fields_on_tuple_variant.rs:5:12
  |
5 |     #[eure(allow_unknown_fields)]
  |            ^^^^^^^^^^^^^^^^^^^^
